fixing fonts and overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,8 +32,7 @@ body{
 	margin: 0;
 	overflow-y: scroll; 
 	font-size: 100%;
-	font-family: Arial, Helvetica, sans-serif;
-	overflow: auto;
+	font-family: Verdana, Geneva, Helvetica, sans-serif;
 }
 
 .wrapper{
